Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/parser/MissingClosingBrace.out
MissingClosingBrace.java:12:5: compiler.err.illegal.start.of.expr
1 error
